[gd_scene load_steps=6 format=2]

[ext_resource path="res://top_ten_information.gd" type="Script" id=1]
[ext_resource path="res://NotoSerifCJKtc-Black.otf" type="DynamicFontData" id=2]
[ext_resource path="res://介面/團體排行榜註解.png" type="Texture" id=3]
[ext_resource path="res://介面/個人排行榜註解.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="top_ten_information" type="Sprite"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 127.0
margin_top = 67.0
margin_right = 211.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="person" type="Sprite" parent="."]
position = Vector2( 168.525, 96.4855 )
scale = Vector2( 0.123554, 0.0931127 )
texture = ExtResource( 4 )

[node name="total_puzzle" type="Label" parent="person"]
margin_left = -136.124
margin_top = -27.0
margin_right = 47.8765
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.305882, 0.380392, 0.431373, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nickname" type="Label" parent="person"]
margin_left = -138.719
margin_top = -119.74
margin_right = 55.2809
margin_bottom = -46.7395
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.305882, 0.380392, 0.431373, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="person"]
margin_left = -135.719
margin_top = 65.4792
margin_right = 172.281
margin_bottom = 135.479
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.305882, 0.380392, 0.431373, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team" type="Sprite" parent="."]
position = Vector2( 158.227, 97.1099 )
scale = Vector2( 0.0954769, 0.0954769 )
texture = ExtResource( 3 )

[node name="total_puzzle" type="Label" parent="team"]
margin_left = -142.159
margin_top = 18.0
margin_right = 156.841
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.305882, 0.380392, 0.431373, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nickname" type="Label" parent="team"]
margin_left = -142.197
margin_top = -82.5264
margin_right = 234.803
margin_bottom = 0.47377
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.305882, 0.380392, 0.431373, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
